# turbo

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  WAYMO_LICENSE  compose.gpu.yaml  compose.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
config/: client_config.yaml  quic_config_client.yaml  quic_config_gcloud.yaml  server_config_gcloud.yaml
docker/: .env.example  Dockerfile_turbo_python_base  Dockerfile_turbo_python_binary  Dockerfile_turbo_quic_binary  Dockerfile_turbo_rust_base  README.Docker.md  compose.gpu.yaml  compose.yaml
docker/config/: client_config_docker.yaml  logging_config_docker.yaml  quic_config_client_docker.yaml  quic_config_gcloud_docker.yaml  server_config_gcloud_docker.yaml
docs/: ARCHITECTURE.md  CONFIGURATION.md  IPC.md  LOGGING.md  MODELS.md
figures/: experiment_model_info.csv  network_operation_log.txt
src/python/: bandwidth_allocator.py  client.py  client_main.py  exceptions.py  server.py  server_main.py
src/python/accuracy/detection/: efficient_det.py  utils.py
src/python/camera_stream/: camera_data_stream.py  example_effdet_d4_output.npy  example_effdet_d4_output.npz  stream_test.ipynb
src/python/model_server/: effdet_inference.py  model_config.yaml
src/python/ping_handler/: ping_handler.py
src/python/util/: bandwidth_allocation_plot.py  live_window_plot.py  plotting_main.py  service_status_plot.py  service_utilization_plot.py  spillable_store.py  thread_pool_manager.py
src/python/utility_curve_stream/: base_scene.py  frame.py  global_scene.py  scene.py  utility_curve_utils.py
src/python/utility_curve_stream/allocators/: allocator_fn.py  lp_allocator.py
src/python/utility_curve_stream/utility_curve_policies/: global_static_utility_curve_policy.py  optimal_utility_curve_policy.py  utility_curve_policy.py
src/python/utility_curve_stream/utility_curves/: abstract_utility_curve.py  concrete_utility_curve.py
src/python/web_frontend/: WEB_DASHBOARD_README.md  setup_web_dashboard.py  start_web_dashboard.py  test_web_dashboard.py  web_config.py  web_dashboard_config_example.yaml  web_frontend.py  web_requirements.txt
src/python/web_frontend/templates/: dashboard.html
src/quic/: Cargo.toml  generate_cert.py
src/quic/quic_client/: Cargo.toml
src/quic/quic_client/src/: client.rs
src/quic/quic_conn/: Cargo.toml
src/quic/quic_conn/src/: lib.rs  test_client.rs  test_server.rs
src/quic/quic_conn/src/core_routines/: bandwidth_refresh_loop.rs  mod.rs  read_local_zmq_socket.rs  read_quic_stream.rs  send_loop.rs
src/quic/quic_conn/src/logging/: allocation_logging.rs  bandwidth_logging.rs  image_context_logging.rs  mod.rs  network_logging.rs  utils.rs
src/quic/quic_conn/src/managers/: bandwidth_manager.rs  mod.rs  queue_item.rs  weighted_stream_manager.rs
src/quic/quic_conn/src/shmem/: mod.rs  shmem_specifications.rs  socket_aliases.rs  socket_utils.rs
src/quic/quic_conn/src/utils/: mod.rs  quic_config.rs  recovery_metrics.rs  tokio_context.rs
src/quic/quic_server/: Cargo.toml
src/quic/quic_server/src/: server.rs
