[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace]
members = ["quic_conn", "quic_server", "quic_client"]
default-members = ["quic_conn", "quic_server", "quic_client"]
resolver = "2"

[workspace.dependencies]
s2n-quic = "1.55.0"
bytes = "1"
hdrhistogram = { version = "7.2", default-features = false }
anyhow = "^1.0.22"
rustls= { version = "^0.23.5", features = ["ring"] }
rustls-pemfile = "^2"
rcgen = "^0.13"
clap= {version = "^4", features = ["derive"]}
tracing = "^0.1.10"
url = "^2"
tokio = {version = "^1.44.1", features = ['rt-multi-thread', 'io-util']}
tracing-futures = "^0.2.0"
tracing-subscriber = {version =  "^0.3.0", features = ['std', 'alloc', 'env-filter', 'fmt', 'time', 'local-time'] }
directories-next = "^2"
zeromq = "0.4.1"
tokio-context = "0.1.3"
serde = "1.0.219"
serde_json = "1.0.140"
polars = {version = "0.48.1", features = ['parquet']}
atomic_float = "1.1.0"
log = "0.4.27"
env_logger = "0.11.8"
config = "0.15.11"
libc = "0.2.174"
ctrlc = "3.5.0"
